--- a/app/src/main/res/layout/production_companies_row.xml
+++ b/app/src/main/res/layout/production_companies_row.xml
@@ -5,7 +5,8 @@
     android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="4dp"
+    android:layout_margin="8dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -20,7 +21,7 @@
         <TextView
             android:id="@+id/company_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@id/company_image"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
