Fetch data by current phone language

--- a/app/src/main/res/navigation/movie_graph.xml
+++ b/app/src/main/res/navigation/movie_graph.xml
@@ -28,5 +28,8 @@
         <argument
             android:name="id"
             app:argType="integer" />
+        <argument
+            android:name="language"
+            app:argType="string" />
     </fragment>
 </navigation>
