--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -7,10 +7,27 @@
         android:layout_height="match_parent"
         tools:context=".view.MovieListFragment">
 
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_search_foreground"
+            android:id="@+id/search_icon"
+            android:layout_alignParentEnd="true"/>
+
+        <EditText
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_toStartOf="@id/search_icon"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="12dp"
+            android:hint="@string/search_bar_hint"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_below="@id/search_icon" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
